# rippling-competitive-intelligence-agent

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  EVAL_REPORT.md  IMPLEMENTATION_STATUS.md  Makefile  README.md  pyproject.toml  render.yaml  vercel.json
config/: default.yaml  model_routes.yaml  source_capabilities.yaml  taxonomy.yaml
docs/: HANDOFF.md  SYSTEMS_GUIDE.md  assignment_traceability.md  decision_log.md  demo_runbook.md  eval_harness_issues.md  improvement_log.md  loom_script.md  loom_talking_points.md  provider_notes.md
docs/adr/: 0001-stack.md  0002-model-routing.md
docs/reference_scenario/: deel_vs_rippling_brief.md  deel_vs_rippling_dashboard.html  deel_vs_rippling_data.json  deel_vs_rippling_trace.jsonl
evals/: adjudication.html  adjudication_guide.md  dataset.jsonl  labels.jsonl
evals/reports/: benchmark_report.md
handoff/: latest_manifest.json
scripts/: build_demo_data.py  seed_demo_runs.py  ship.sh
src/competitive_agent/: __init__.py  api.py  chat.py  chat_viz.py  cli.py  comparison.py  config.py  conversation.py  coverage.py  exceptions.py  focal_gate.py  graph.py  industry.py  model_gateway.py  nodes.py  opportunity_engine.py  paid_search.py  planner.py  portfolio.py  product_focus.py  prompt_registry.py  report.py  runner.py  security.py  state.py  synthesis.py  tracing.py  visualize.py
tests/behavior/: test_chat.py  test_conversation.py  test_crashed_run_reporting.py  test_evals.py  test_failure_handling.py  test_no_duplication.py  (+2 more)
ui/: index.html  package-lock.json  package.json  vite.config.js
(+163 files in other folders)
