[project]
name = "competitive-agent"
version = "0.1.0"
description = "Competitive Marketing Intelligence Director — public-evidence competitor analysis relative to a focal company (Rippling)"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.2,<3",
    "typer>=0.12,<1",
    "httpx>=0.27,<1",
    "anthropic>=0.40",
    "jinja2>=3.1,<4",
    "trafilatura>=1.9",
    "beautifulsoup4>=4.12,<5",
    "pyyaml>=6.0,<7",
    "fastapi>=0.111,<1",
    "uvicorn>=0.30,<1",
]

[project.scripts]
competitive-agent = "competitive_agent.cli:app"
competitive-agent-api = "competitive_agent.api:main"

[dependency-groups]
dev = [
    "pytest>=8.2,<9",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-pyyaml",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/competitive_agent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# typer.Option/Argument in defaults is the Typer idiom
"src/competitive_agent/cli.py" = ["B008"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
check_untyped_defs = true
